kube/deploy/apps/kubevirt/netpol.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: &app kubevirt
  namespace: *app
spec:
  endpointSelector: {}
  ingress:
    - fromEntities:
        - world
    - fromEndpoints:
        - {}
    - fromEntities:
        - cluster
  egress:
    - toEntities:
        - world
    - toEndpoints:
        - {}
    - toEntities:
        - cluster
